// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineErrorDialog /> should render with minimal props 1`] = `
<PipelineErrorDialog
  actions={Array []}
  message=""
  params={
    Object {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": Object {},
    }
  }
>
  <BasicDialog
    actions={Array []}
    title="modal.title_error"
  >
    <div
      aria-labelledby="basicDialogTitle basicDialogDesc"
      className="css-hrxvvd"
      data-test-id="basicDialog"
      role="alert"
    >
      <div
        className="css-1sirlct"
      >
        <div
          className="css-axwumg"
          id="basicDialogTitle"
        >
          <Ellipsis
            className=""
            ellipsis="..."
            rows={3}
          >
            <Dotdotdot
              clamp={3}
              className=""
              ellipsis="..."
              tagName="div"
              truncationChar="…"
              useNativeClamp={true}
            >
              <div
                className=""
              >
                <Translate
                  className=""
                  params={Object {}}
                  role={null}
                  string="modal.title_error"
                >
                  <span
                    className=""
                    role={null}
                  >
                    modal.title_error
                  </span>
                </Translate>
              </div>
            </Dotdotdot>
          </Ellipsis>
        </div>
        <div
          className="css-1rx8rr8"
          id="basicDialogDesc"
        >
          <div
            onClick={[Function]}
          >
            <Translate
              className=""
              params={Object {}}
              role={null}
              string="Error message"
            >
              <span
                className=""
                role={null}
              >
                Error message
              </span>
            </Translate>
          </div>
        </div>
      </div>
      <div
        className="css-1h5vk0a"
      >
        <div
          className="css-hw75se"
        />
      </div>
    </div>
  </BasicDialog>
</PipelineErrorDialog>
`;

exports[`<PipelineErrorDialog /> should show a custom message if a message is is provided 1`] = `
<PipelineErrorDialog
  actions={Array []}
  message="Custom message"
  params={
    Object {
      "code": "123",
      "message": "Error message",
      "pipeline": "fakePipeline",
      "request": Object {},
    }
  }
>
  <BasicDialog
    actions={Array []}
    title="modal.title_error"
  >
    <div
      aria-labelledby="basicDialogTitle basicDialogDesc"
      className="css-hrxvvd"
      data-test-id="basicDialog"
      role="alert"
    >
      <div
        className="css-1sirlct"
      >
        <div
          className="css-axwumg"
          id="basicDialogTitle"
        >
          <Ellipsis
            className=""
            ellipsis="..."
            rows={3}
          >
            <Dotdotdot
              clamp={3}
              className=""
              ellipsis="..."
              tagName="div"
              truncationChar="…"
              useNativeClamp={true}
            >
              <div
                className=""
              >
                <Translate
                  className=""
                  params={Object {}}
                  role={null}
                  string="modal.title_error"
                >
                  <span
                    className=""
                    role={null}
                  >
                    modal.title_error
                  </span>
                </Translate>
              </div>
            </Dotdotdot>
          </Ellipsis>
        </div>
        <div
          className="css-1rx8rr8"
          id="basicDialogDesc"
        >
          <div
            onClick={[Function]}
          >
            <Translate
              className=""
              params={Object {}}
              role={null}
              string="Custom message"
            >
              <span
                className=""
                role={null}
              >
                Custom message
              </span>
            </Translate>
          </div>
        </div>
      </div>
      <div
        className="css-1h5vk0a"
      >
        <div
          className="css-hw75se"
        />
      </div>
    </div>
  </BasicDialog>
</PipelineErrorDialog>
`;
